<resources>
    <string name="app_name">AutoHub</string>
    <string name="easy_way_to_buy_your_dream_car">Easy Way to buy \nyour dream car</string>
    <string name="welcome_to_autohub_the_ultimate_car_shopping_app_designed_to_make_finding_your_next_vehicle_a_breeze">Welcome to AutoHub, the ultimate car shopping app designed to make finding your next vehicle a breeze.</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="alex_johnson">Alex Johnson</string>
    <string name="search_car">search car...</string>
    <string name="popular_car">Popular Car</string>
    <string name="view_all">view all</string>
    <string name="title">title</string>
    <string name="_0">$0</string>
    <string name="car_detail">Car Detail</string>
    <string name="_0_0">0.0</string>
    <string name="description">From the deep roar of the fine-tuned V-8 engine to dynamics engineered by BMW M, the 2025 BMW M850i xDrive Coupe is designed to satisfy the most driven thrill-seekers.</string>
    <string name="total_ncapacity">Total \nCapacity</string>
    <string name="_4_seats">4 seats</string>
    <string name="highest_nspeed">Highest \nSpeed</string>
    <string name="_190_km_h">190 KM/H</string>
    <string name="engine_noutput">Engine \nOutput</string>
    <string name="price">Price</string>
    <string name="social_media_link">Social Media Link</string>
    <string name="contact_support">Contact Support</string>
    <string name="rating_and_review">Rating and Review</string>
    <string name="common_function">Common Function</string>
    <string name="maintain">Maintain</string>
    <string name="auto_parts">Auto Parts</string>
    <string name="driving_skill">Driving skill</string>
</resources>