<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity"
    android:background="@color/black200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/back1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/fav_icon"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_detail"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintEnd_toStartOf="@id/btn_favorite"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/intro_car"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/topLayer"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rec_white_bg"
        app:layout_constraintTop_toBottomOf="@id/iv_car"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/detail_white_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rec_shape_border"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black200"
            app:layout_constraintTop_toTopOf="@id/detail_white_rec_view"
            app:layout_constraintStart_toStartOf="@id/detail_white_rec_view"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textSize="16sp"
            android:textColor="@color/black200"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_rating"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintEnd_toStartOf="@id/tv_rating"
            android:src="@drawable/star"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="2sp"
            android:textSize="16sp"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/tv_rating"
            android:text="@string/description"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/capacityCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_bg_rec"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/highestCard">

            <ImageView
                android:id="@+id/iv_sitIcon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/sit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_totalCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_sitIcon"
                android:layout_marginStart="16dp"
                android:text="@string/total_ncapacity"
                android:textColor="@color/black200"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_totalCapacity"
                android:layout_marginStart="16dp"
                android:text="@string/_4_seats"
                android:textColor="@color/black200"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/highestCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_bg_rec"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toEndOf="@id/capacityCard"
            app:layout_constraintEnd_toStartOf="@id/engineCard">

            <ImageView
                android:id="@+id/iv_speedIcon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/speed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_highestSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_speedIcon"
                android:layout_marginStart="16dp"
                android:text="@string/highest_nspeed"
                android:textColor="@color/black200"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_highestSpeed"
                android:layout_marginStart="16dp"
                android:text="@string/_190_km_h"
                android:textColor="@color/black200"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/engineCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/grey_bg_rec"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/highestCard">

            <ImageView
                android:id="@+id/iv_engineIcon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/engine"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_engineOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_engineIcon"
                android:layout_marginStart="16dp"
                android:text="@string/engine_noutput"
                android:textColor="@color/black200"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_engine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_engineOutput"
                android:layout_marginStart="16dp"
                android:text="@string/_190_km_h"
                android:textColor="@color/black200"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buyNow"
            style="@android:style/Widget.Button"
            android:layout_width="180dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/black_bg"
            android:text="Buy Now"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/engineCard"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black200"
            app:layout_constraintTop_toTopOf="@id/btn_buyNow"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$45000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black200"
            app:layout_constraintBottom_toBottomOf="@id/btn_buyNow"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>