<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.profile.ProfileFragment"
    android:background="@color/grey200">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/back2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textColor="@color/black200"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_profilePic"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alex_johnson"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rec_white_bg"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/detail_white_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rec_shape_border"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_common_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_function"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black200"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/maintainCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_bg_rec"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_common_function"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/highestCard">

            <ImageView
                android:id="@+id/iv_maintainIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/maintain"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_maintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_maintainIcon"

                android:text="@string/maintain"
                android:textColor="@color/black200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/highestCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_bg_rec"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_common_function"
            app:layout_constraintStart_toEndOf="@id/maintainCard"
            app:layout_constraintEnd_toStartOf="@id/engineCard">

            <ImageView
                android:id="@+id/iv_autoPartsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/autopart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_autoPartsIcon"
                android:text="@string/auto_parts"
                android:textColor="@color/black200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/engineCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/grey_bg_rec"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_common_function"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/highestCard">

            <ImageView
                android:id="@+id/iv_engineIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/drivingskill"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_engineIcon"
                android:text="@string/driving_skill"
                android:textColor="@color/black200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_ratingReview"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/grey_bg_rec1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maintainCard"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/iv_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:src="@drawable/review"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_iv_reviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_and_review"
                android:textColor="@color/black200"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iv_review"
                app:layout_constraintBottom_toBottomOf="@id/iv_review"
                app:layout_constraintStart_toEndOf="@id/iv_review"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_contact"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/grey_bg_rec1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ratingReview"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/iv_contactIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:src="@drawable/contact"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_contactText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_support"
                android:textColor="@color/black200"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iv_contactIcon"
                app:layout_constraintBottom_toBottomOf="@id/iv_contactIcon"
                app:layout_constraintStart_toEndOf="@id/iv_contactIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/grey_bg_rec1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_contact">

            <ImageView
                android:id="@+id/iv_shareIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:src="@drawable/social"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_media_link"
                android:textColor="@color/black200"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iv_shareIcon"
                app:layout_constraintBottom_toBottomOf="@id/iv_shareIcon"
                app:layout_constraintStart_toEndOf="@id/iv_shareIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/black_bg"
            android:text="Log Out"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btn_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    


</androidx.constraintlayout.widget.ConstraintLayout>